# swagger.json
@@ -28,46 +28,21 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       },
       "post": {
         "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "example": "any"
-                },
-                "sex": {
-                  "example": "any"
-                },
-                "birthDate": {
-                  "example": "any"
-                },
-                "birthWeight": {
-                  "example": "any"
-                },
-                "sireBreed": {
-                  "example": "any"
-                },
-                "damBreed": {
-                  "example": "any"
-                },
-                "currentWeight": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
+        "parameters": [],
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -92,6 +67,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       },
@@ -103,41 +81,14 @@
             "in": "path",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "example": "any"
-                },
-                "sex": {
-                  "example": "any"
-                },
-                "birthDate": {
-                  "example": "any"
-                },
-                "birthWeight": {
-                  "example": "any"
-                },
-                "sireBreed": {
-                  "example": "any"
-                },
-                "damBreed": {
-                  "example": "any"
-                },
-                "currentWeight": {
-                  "example": "any"
-                }
-              }
-            }
           }
         ],
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -157,6 +108,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
